--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,14 @@
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
+
 #cta {
   background-color: rgb(125, 255, 212);
   padding-top: 20px;
@@ -21,6 +31,9 @@ body {
 
   padding: 3% 15%;
 }
+ 
+
+/* Carousel */
 
 .carousel-item {
   padding: 7% 15%;
@@ -48,6 +61,7 @@ body {
   color: darkgrey;
 }
 
+
 /* Download Buttons */
 
 .download-btn {
@@ -55,9 +69,14 @@ body {
 }
 
 
+/* footer */
+
 #footer {
   text-align: right;
 }
+
+
+/* Headers */
 
 h1 {
     font-size: 2.5rem;
@@ -74,6 +93,7 @@ h3 {
   font-weight:bold;
 }
 
+
 /* Icons */
 
 .icon {
@@ -84,17 +104,16 @@ h3 {
  color: lightgreen;
  transition-duration: 0.5s;
  transform-style: preserve-3d;
-
 }
+
 
 /* Main Images */
 
 .img
 {
-    border-radius: 40%;
-    width: 500px;
+    border-radius: 60%;
+    width: 400px;
     transform: rotate(-20deg);
-
 }
 
 .img:hover {
@@ -103,7 +122,9 @@ transform-style: preserve-3d;
 transform: rotate(0deg);
 }
 
+
 /* Nav Bar */
+
 .nav-item {
 padding: 0 18px;
 }
@@ -116,6 +137,7 @@ p {
   color: grey;
 }
 
+
 /* Pictures */
 
 .pic {
@@ -125,12 +147,18 @@ p {
 
 }
 
+
 /* Press */
 
 #press {
   background-color: aliceblue;
   text-align: center;
   padding-bottom: 3%;
+  }
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
   }
 
 
@@ -148,10 +176,6 @@ padding: 3%;
 
 }
 
-.press-logo {
-  width: 15%;
-  margin: 20px 20px 50px;
-}
 
 /* Testimonial */
 
